// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Feed List and Item Actions 1`] = `
<ul
  aria-label="Feed List Item with popover actions example"
  class="fd-feed-list"
>
  
    
  <li
    class="fd-feed-list__body"
  >
    
        
    <div
      aria-label="John Doe"
      class="fd-avatar fd-avatar--s fd-avatar--thumbnail fd-feed-list__thumb"
      role="img"
      style="background-image: url(https://avatars.dicebear.com/api/human/fe.svg?m=6&b=%23f5f0f0&mood[]=surprised)"
      title="John Doe"
    >
          
        
    </div>
       
        
        
    <div
      class="fd-feed-list__content"
    >
      
            
      <div
        class="fd-feed-list__actions"
      >
        
                
        <div
          class="fd-popover"
        >
          
                    
          <div
            class="fd-popover__control"
          >
            
                        
            <button
              aria-controls="actionSheetDesktop"
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="More Options"
              class="fd-button fd-button--compact fd-button--transparent"
              onclick="onPopoverClick('actionSheetDesktop');"
            >
              
                            
              <i
                class="sap-icon--overflow"
              />
              
                        
            </button>
            
                    
          </div>
          
                    
          <div
            aria-hidden="true"
            class="fd-popover__body fd-popover__body--right"
            id="actionSheetDesktop"
          >
            
                        
            <ul
              aria-label="List of contextual options"
              class="fd-action-sheet fd-action-sheet--compact"
              role="list"
            >
              
                            
              <li
                class="fd-action-sheet__item"
                role="listitem"
              >
                
                                
                <button
                  class="fd-button fd-button--full-width fd-button--compact fd-button--transparent fd-button--text-alignment-left"
                >
                  
                                    
                  <i
                    class="sap-icon--attachment"
                  />
                  
                                    
                  <span
                    class="fd-button__text"
                  >
                    Button 1
                  </span>
                  
                                
                </button>
                
                            
              </li>
              
                            
              <li
                class="fd-action-sheet__item"
                role="listitem"
              >
                
                                
                <button
                  class="fd-button fd-button--full-width fd-button--compact fd-button--transparent fd-button--text-alignment-left"
                >
                  
                                    
                  <i
                    class="sap-icon--add"
                  />
                  
                                    
                  <span
                    class="fd-button__text"
                  >
                    Button 2
                  </span>
                  
                                
                </button>
                
                            
              </li>
              
                            
              <li
                class="fd-action-sheet__item"
                role="listitem"
              >
                
                                
                <button
                  class="fd-button fd-button--full-width fd-button--compact fd-button--transparent fd-button--text-alignment-left"
                >
                  
                                    
                  <i
                    class="sap-icon--print"
                  />
                  
                                    
                  <span
                    class="fd-button__text"
                  >
                    Button 3
                  </span>
                  
                                
                </button>
                
                            
              </li>
              
                        
            </ul>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
            
      <p
        class="fd-feed-list__text"
      >
        
                
        <span
          class="fd-feed-list__name"
        >
          Joe Doe: 
        </span>
        
                
        <span>
          In hac habitasse platea dictumst. Fusce eu dui viverra, dictum justo in, pul aug. Praesent aliquam massa non lectus commodo, id vestibulum lectus auctor. Proin lorem quam, accumsan ac dui et, cursus ornare dui. Nunc ultricies dolor felis, in viverra mi venenatis in. Sed vel nisl a dui posuere ullamcorper. Donec posuere id massa at dictum. Suspendisse potenti.
        </span>
        
            
      </p>
                       
            
      <div
        class="fd-feed-list__footer"
      >
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Aug 20, 2020
        </small>
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Reply
        </small>
        
            
      </div>
      
        
    </div>
            
    
  </li>
  

</ul>
`;

exports[`Storyshots Components/Feed List and Item Borderless group 1`] = `
<ul
  aria-label="Feed List Item group example"
  class="fd-feed-list fd-feed-list--group fd-feed-list--no-border"
>
  
    
  <li
    class="fd-feed-list__body"
  >
    
        
    <div
      aria-label="John Doe"
      class="fd-avatar fd-avatar--s fd-avatar--placeholder fd-feed-list__thumb"
      role="img"
      title="John Doe"
    >
      
                
      <i
        class="sap-icon--person-placeholder"
      />
      
        
    </div>
     
        
    <div
      class="fd-feed-list__content"
    >
      
            
      <p
        class="fd-feed-list__text"
      >
        
                
        <span
          class="fd-feed-list__name"
        >
          Cruz: 
        </span>
        
                
        <span>
          Maecenas convallis velit quis felis dictum, in ultrices quam faucibus.        
            
        </span>
      </p>
      
            
      <div
        class="fd-feed-list__footer"
      >
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Aug 21, 2020
        </small>
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Reply
        </small>
        
            
      </div>
      
        
    </div>
    
   
  </li>
  
   
    
  <li
    class="fd-feed-list__body"
  >
    
        
    <div
      aria-label="John Doe"
      class="fd-avatar fd-avatar--s fd-avatar--thumbnail fd-feed-list__thumb"
      role="img"
      style="background-image: url(https://avatars.dicebear.com/api/human/fe.svg?m=6&b=%23f5f0f0&mood[]=surprised)"
      title="John Doe"
    >
          
        
    </div>
    
     
        
    <div
      class="fd-feed-list__content"
    >
      
            
      <p
        class="fd-feed-list__text"
      >
        
                
        <span
          class="fd-feed-list__name"
        >
          Joe Doe: 
        </span>
        
                
        <span>
          Maecenas convallis velit quis felis dictum, in ultrices quam faucibus.        
            
        </span>
      </p>
      
            
      <div
        class="fd-feed-list__footer"
      >
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Aug 22, 2020
        </small>
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Reply
        </small>
        
            
      </div>
      
        
    </div>
         
    
  </li>
  
    
    
  <li
    class="fd-feed-list__body"
  >
    
        
    <div
      aria-label="John Doe"
      class="fd-avatar fd-avatar--s fd-feed-list__thumb"
      role="img"
      style="background-image: url(https://avatars.dicebear.com/api/male/john.svg?mood[]=happy)"
      title="John Doe"
    />
     
        
    <div
      class="fd-feed-list__content"
    >
      
            
      <p
        class="fd-feed-list__text"
      >
        
                
        <span
          class="fd-feed-list__name"
        >
          Sanchez: 
        </span>
        
                
        <span>
          Maecenas convallis velit quis felis dictum, in ultrices quam faucibus.        
            
        </span>
      </p>
      
            
      <div
        class="fd-feed-list__footer"
      >
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Aug 20, 2020
        </small>
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Reply
        </small>
        
            
      </div>
      
        
    </div>
    
   
  </li>
  

</ul>
`;

exports[`Storyshots Components/Feed List and Item Group 1`] = ` `;

exports[`Storyshots Components/Feed List and Item Linked 1`] = `
<ul
  aria-label="Feed List Item with user link example"
  class="fd-feed-list"
>
  
    
  <li
    class="fd-feed-list__body"
  >
    
        
    <div
      aria-label="John Doe"
      class="fd-avatar fd-avatar--s fd-avatar--thumbnail fd-feed-list--link fd-feed-list__thumb"
      role="img"
      style="background-image: url(https://avatars.dicebear.com/api/human/fe.svg?m=6&b=%23f5f0f0&mood[]=surprised)"
      tabindex="0"
      title="John Doe"
    />
    
             
        
    <div
      class="fd-feed-list__content"
    >
      
            
      <p
        class="fd-feed-list__text"
      >
        
                
        <span
          class="fd-feed-list__name"
        >
          
                    
          <a
            class="fd-link fd-link--emphasized"
            href="#"
          >
            Joe Doe: 
          </a>
           
                
        </span>
        
                Suspendisse facilisis sed odio in mollis. Donec quis justo aliquam, porta justo a, accumsan lorem.
            
      </p>
      
            
            
      <div
        class="fd-feed-list__footer"
      >
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Aug 20, 2020
        </small>
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Reply
        </small>
        
            
      </div>
      
        
    </div>
    
    
  </li>
  

</ul>
`;

exports[`Storyshots Components/Feed List and Item Mobile 1`] = `
<div
  style="width: 350px; height: 600px; position: relative"
>
  
    
  <ul
    aria-label="Feed List Item small size example"
    class="fd-feed-list fd-feed-list--s"
  >
    
        
    <li
      class="fd-feed-list__body"
    >
      
            
      <div
        class="fd-feed-list__wrapper"
      >
        
                
        <div
          class="fd-feed-list__wrapper fd-feed-list__wrapper--header"
        >
          
                
          <div
            aria-label="John Doe"
            class="fd-avatar fd-avatar--s fd-avatar--thumbnail fd-feed-list__thumb"
            role="img"
            style="background-image: url(https://avatars.dicebear.com/api/human/fe.svg?m=6&b=%23f5f0f0&mood[]=surprised)"
            title="John Doe"
          >
                
                
          </div>
          
                
          <div>
            
                    
            <span
              class="fd-feed-list__name"
            >
              Joe Doe: 
            </span>
            
                    
            <div
              class="fd-feed-list__footer"
            >
              
                        
              <small
                class="fd-feed-list__footer--byline"
              >
                Aug 20, 2020
              </small>
              
                        
              <small
                class="fd-feed-list__footer--byline"
              >
                Reply
              </small>
              
                    
            </div>
            
                
          </div>
          
                
                
        </div>
        
                
        <div
          class="fd-feed-list__action"
        >
          
                    
          <button
            aria-controls="actionSheetPhone"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="More Options"
            class="fd-button fd-button--transparent"
            onclick="toggleClass('actionSheetPhone', 'fd-action-sheet__wrapper--active');"
          >
            
                            
            <i
              class="sap-icon--overflow"
            />
            
                    
          </button>
          
                
        </div>
        
            
      </div>
          
        
            
      <div
        class="fd-feed-list__content"
      >
        
                
        <p
          class="fd-feed-list__text"
        >
          
                    Suspendisse facilisis sed odio in mollis. Donec quis justo aliquam, porta justo a, accumsan lorem.
                
        </p>
        
            
      </div>
      
            
      <div
        class="fd-action-sheet__wrapper"
        id="actionSheetPhone"
      >
        
                
        <h6
          class="fd-action-sheet__title"
        >
          Press cancel to hide action sheet
        </h6>
        
                
        <ul
          aria-label="List of contextual options"
          class="fd-action-sheet fd-action-sheet--mobile"
          role="list"
        >
          
                    
          <li
            class="fd-action-sheet__item"
            role="listitem"
          >
            
                        
            <button
              class="fd-button fd-button--full-width fd-button--transparent fd-button--text-alignment-left"
            >
              
                            
              <i
                class="sap-icon--attachment"
              />
              
                            
              <span
                class="fd-button__text"
              >
                Button 1
              </span>
              
                        
            </button>
            
                    
          </li>
          
                    
          <li
            class="fd-action-sheet__item"
            role="listitem"
          >
            
                        
            <button
              class="fd-button fd-button--full-width fd-button--transparent fd-button--text-alignment-left"
            >
              
                            
              <i
                class="sap-icon--add"
              />
              
                            
              <span
                class="fd-button__text"
              >
                Button 2
              </span>
              
                        
            </button>
            
                    
          </li>
          
                    
          <li
            class="fd-action-sheet__item"
            role="listitem"
          >
            
                        
            <button
              class="fd-button fd-button--full-width fd-button--transparent fd-button--text-alignment-left"
            >
              
                            
              <i
                class="sap-icon--print"
              />
              
                            
              <span
                class="fd-button__text"
              >
                Button 3
              </span>
              
                        
            </button>
            
                    
          </li>
          
                    
          <li
            class="fd-action-sheet__item"
            role="listitem"
          >
            
                        
            <button
              class="fd-button fd-button--full-width fd-button--negative"
              onclick="toggleClass('actionSheetPhone', 'fd-action-sheet__wrapper--active');"
            >
              
                            
              <span
                class="fd-button__text"
              >
                Cancel
              </span>
              
                        
            </button>
            
                    
          </li>
          
                
        </ul>
        
            
      </div>
      
        
    </li>
     
    
  </ul>
  

</div>
`;

exports[`Storyshots Components/Feed List and Item No image 1`] = `
<ul
  aria-label="Feed List Item without user image example"
  class="fd-feed-list"
>
  
    
  <li
    class="fd-feed-list__body"
  >
         
        
    <div
      class="fd-feed-list__content"
    >
      
            
      <p
        class="fd-feed-list__text"
      >
        
                
        <span
          class="fd-feed-list__name"
        >
          Joe Doe: 
        </span>
        
                Suspendisse facilisis sed odio in mollis. Donec quis justo aliquam, porta justo a, accumsan lorem.
            
      </p>
      
            
            
      <div
        class="fd-feed-list__footer"
      >
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Aug 20, 2020
        </small>
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Reply
        </small>
        
            
      </div>
      
        
    </div>
    
    
  </li>
  

</ul>
`;

exports[`Storyshots Components/Feed List and Item Placeholder image 1`] = `
<ul
  aria-label="Feed List Item placeholder user image example"
  class="fd-feed-list"
>
  
    
  <li
    class="fd-feed-list__body"
  >
    
        
    <div
      aria-label="John Doe"
      class="fd-avatar fd-avatar--s fd-avatar--placeholder fd-feed-list__thumb"
      role="img"
      title="John Doe"
    >
      
            
      <i
        class="sap-icon--person-placeholder"
      />
      
        
    </div>
    

        
    <div
      class="fd-feed-list__content"
    >
      
            
      <p
        class="fd-feed-list__text"
      >
        
                
        <span
          class="fd-feed-list__name"
        >
          Joe Doe: 
        </span>
        
                Suspendisse facilisis sed odio in mollis. Donec quis justo aliquam, porta justo a, accumsan lorem.
            
      </p>
      
            
            
      <div
        class="fd-feed-list__footer"
      >
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Aug 20, 2020
        </small>
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Reply
        </small>
        
            
      </div>
      
        
    </div>
    
    
  </li>
  

</ul>
`;

exports[`Storyshots Components/Feed List and Item RTL 1`] = `
<div
  dir="rtl"
>
  
    
  <ul
    aria-label="Feed List Item with RTL direction example"
    class="fd-feed-list"
  >
    
        
    <li
      class="fd-feed-list__body"
    >
      
            
      <div
        aria-label="John Doe"
        class="fd-avatar fd-avatar--s fd-avatar--thumbnail fd-feed-list__thumb"
        role="img"
        style="background-image: url(https://avatars.dicebear.com/api/human/fe.svg?m=6&b=%23f5f0f0&mood[]=surprised)"
        title="John Doe"
      >
            
            
      </div>
      
        
            
      <div
        class="fd-feed-list__content"
      >
        
                
        <div
          class="fd-feed-list__actions"
        >
          
                    
          <div
            class="fd-popover"
          >
            
                        
            <div
              class="fd-popover__control"
            >
              
                            
              <button
                aria-controls="actionSheetDesktopRTL"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More Options"
                class="fd-button fd-button--compact fd-button--transparent"
                onclick="onPopoverClick('actionSheetDesktopRTL');"
              >
                
                                
                <i
                  class="sap-icon--overflow"
                />
                
                            
              </button>
              
                        
            </div>
            
                        
            <div
              aria-hidden="true"
              class="fd-popover__body"
              id="actionSheetDesktopRTL"
            >
              
                            
              <ul
                aria-label="List of contextual options"
                class="fd-action-sheet fd-action-sheet--compact"
                role="list"
              >
                
                                
                <li
                  class="fd-action-sheet__item"
                  role="listitem"
                >
                  
                                    
                  <button
                    class="fd-button fd-button--full-width fd-button--compact fd-button--transparent fd-button--text-alignment-left"
                  >
                    
                                        
                    <i
                      class="sap-icon--attachment"
                    />
                    
                                        
                    <span
                      class="fd-button__text"
                    >
                      Button 1
                    </span>
                    
                                    
                  </button>
                  
                                
                </li>
                
                                
                <li
                  class="fd-action-sheet__item"
                  role="listitem"
                >
                  
                                    
                  <button
                    class="fd-button fd-button--full-width fd-button--compact fd-button--transparent fd-button--text-alignment-left"
                  >
                    
                                        
                    <i
                      class="sap-icon--add"
                    />
                    
                                        
                    <span
                      class="fd-button__text"
                    >
                      Button 2
                    </span>
                    
                                    
                  </button>
                  
                                
                </li>
                
                                
                <li
                  class="fd-action-sheet__item"
                  role="listitem"
                >
                  
                                    
                  <button
                    class="fd-button fd-button--full-width fd-button--compact fd-button--transparent fd-button--text-alignment-left"
                  >
                    
                                        
                    <i
                      class="sap-icon--print"
                    />
                    
                                        
                    <span
                      class="fd-button__text"
                    >
                      Button 3
                    </span>
                    
                                    
                  </button>
                  
                                
                </li>
                
                            
              </ul>
              
                            
            </div>
            
                        
          </div>
          
                    
        </div>
        
            
                
        <p
          class="fd-feed-list__text"
          dir="rtl"
        >
          
                    
          <span
            class="fd-feed-list__name"
          >
            Joe Doe: 
          </span>
          
                    
          <span>
            Suspendisse facilisis sed odio in mollis. Donec quis justo aliquam, porta justo a, accumsan lorem.
          </span>
          
                
        </p>
        
                
                
        <div
          class="fd-feed-list__footer"
        >
          
                    
          <small
            class="fd-feed-list__footer--byline"
          >
            Aug 20, 2020
          </small>
          
                    
          <small
            class="fd-feed-list__footer--byline"
          >
            Reply
          </small>
          
                
        </div>
        
            
      </div>
                
        
    </li>
        
    
  </ul>
  

</div>
`;

exports[`Storyshots Components/Feed List and Item Show less 1`] = `
<ul
  aria-label="Feed List Item with show less text example"
  class="fd-feed-list"
>
  
    
  <li
    class="fd-feed-list__body"
  >
    
        
    <div
      aria-label="John Doe"
      class="fd-avatar fd-avatar--s fd-avatar--thumbnail fd-feed-list__thumb"
      role="img"
      style="background-image: url(https://avatars.dicebear.com/api/human/fe.svg?m=6&b=%23f5f0f0&mood[]=surprised)"
      title="John Doe"
    />
    
             
        
    <div
      class="fd-feed-list__content"
    >
      
            
      <p
        class="fd-feed-list__text"
      >
        
                
        <span
          class="fd-feed-list__name"
        >
          Joe Doe: 
        </span>
        
                
        <span>
          Maecenas convallis velit quis felis dictum, in ultrices quam faucibus. Morbi tempor eu elit eu consequat. Sed at lorem a ex consequat pharetra. Etiam convallis odio at vulputate venenatis. In sit amet pharetra urna. Ut nulla nisi, porta at ligula a, elementum ullamcorper lectus. Suspendisse blandit, risus nec vestibulum volutpat, nulla neque rhoncus dolor, vitae rutrum lectus neque nec ligula. Maecenas pulvinar, ligula nec fringilla volutpat, urna quam rutrum tellus, vitae elementum elit est malesuada nunc. Maecenas eu risus posuere, volutpat justo in, ultricies sem
                
          <a
            class="fd-link fd-feed-list__link--more"
            tabindex="0"
          >
            Less
          </a>
                  
            
        </span>
      </p>
      
            
            
      <div
        class="fd-feed-list__footer"
      >
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Aug 20, 2020
        </small>
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Reply
        </small>
        
            
      </div>
      
        
    </div>
    
    
  </li>
  

</ul>
`;

exports[`Storyshots Components/Feed List and Item Show more 1`] = `
<ul
  aria-label="Feed List Item with show more text example"
  class="fd-feed-list"
>
  
    
  <li
    class="fd-feed-list__body"
  >
    
        
    <div
      aria-label="John Doe"
      class="fd-avatar fd-avatar--s fd-avatar--thumbnail fd-feed-list__thumb"
      role="img"
      style="background-image: url(https://avatars.dicebear.com/api/human/fe.svg?m=6&b=%23f5f0f0&mood[]=surprised)"
      title="John Doe"
    />
    
             
        
    <div
      class="fd-feed-list__content"
    >
      
            
      <p
        class="fd-feed-list__text"
      >
        
                
        <span
          class="fd-feed-list__name"
        >
          Joe Doe: 
        </span>
        
                
        <span>
          Maecenas convallis velit quis felis dictum, in ultrices quam faucibus. Morbi tempor eu elit eu consequat. Sed at lorem a ex consequat pharetra. Etiam convallis odio at vulputate venenatis. In sit amet pharetra urna. Ut nulla nisi, porta at ligula a, elementum ullamcorper lectus. Suspendisse blandit, risus nec vestibulum volutpat, nulla neque rhoncus dolor, vitae rutrum lectus neque nec ligula. Maecenas pulvinar, ligula nec fringilla volutpat, urna quam rutrum tellus, vi...
                
          <a
            class="fd-link fd-feed-list__link--more"
            tabindex="0"
          >
            More
          </a>
                  
            
        </span>
      </p>
      
            
            
      <div
        class="fd-feed-list__footer"
      >
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Aug 20, 2020
        </small>
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Reply
        </small>
        
            
      </div>
      
        
    </div>
    
    
  </li>
  

</ul>
`;

exports[`Storyshots Components/Feed List and Item Standard 1`] = `
<ul
  aria-label="Feed List Item default example"
  class="fd-feed-list"
>
  
    
  <li
    class="fd-feed-list__body"
  >
    
        
    <div
      aria-label="John Doe"
      class="fd-avatar fd-avatar--s fd-avatar--thumbnail fd-feed-list__thumb"
      role="img"
      style="background-image: url(https://avatars.dicebear.com/api/human/fe.svg?m=6&b=%23f5f0f0&mood[]=surprised)"
      title="John Doe"
    >
          
        
    </div>
    
         
        
    <div
      class="fd-feed-list__content"
    >
      
            
      <p
        class="fd-feed-list__text"
      >
        
                
        <span
          class="fd-feed-list__name"
        >
          Joe Doe: 
        </span>
        
                Suspendisse facilisis sed odio in mollis. Donec quis justo aliquam, porta justo a, accumsan lorem.
            
      </p>
      
            
      <div
        class="fd-feed-list__footer"
      >
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Aug 20, 2020
        </small>
        
                
        <small
          class="fd-feed-list__footer--byline"
        >
          Reply
        </small>
        
            
      </div>
      
        
    </div>
    
    
  </li>
  

</ul>
`;
